# legislature-tools

./: .gitignore  AGENTS.md  IMPLEMENTATION-PLAN-v2.md  README.md  TODO.md  anomaly-detection-guidance.md  initial-implementation-plan.txt  review-results-1-deep-research-report.md  review-results-1A-peer-feedback.md
testifier_audit/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
testifier_audit/configs/: default.yaml  nicknames.SOURCE.md  nicknames.csv  voter_registry_enabled.yaml
testifier_audit/scripts/ci/: lint.sh  run.sh  test.sh
testifier_audit/scripts/data/: update_nicknames.py
testifier_audit/scripts/db/: import_submissions.sh
testifier_audit/scripts/report/: build_global_baselines.py  build_reports_index.py  capture_report_screenshot.py  (+2 more)
testifier_audit/tests/: test_analysis_registry.py  test_bucketed_detectors.py  test_capture_report_screenshot.py  test_cli.py  test_composite_score.py  test_config.py  test_data_quality_panel.py  test_dedup_lenses.py  test_detectors_smoke.py  test_drilldown_exports.py  test_duplicates_near.py  test_evidence_contract.py  test_global_baselines.py  test_hearing_metadata.py  test_heatmaps.py  test_help_registry.py  test_import_tracking.py  test_io_read.py  test_multivariate_anomalies.py  test_multivariate_viz.py  test_names.py  test_off_hours_detector.py  test_org_anomalies.py  test_org_blank_rate_viz.py  test_pass1_profile_scope.py  test_pass2_deep_dive.py  test_pipeline_integration.py  test_pro_rate_viz.py  test_proportion_stats.py  test_rarity.py  test_rarity_baselines.py  test_report_chart_payload.py  test_report_layout_contract.py  test_report_render_helpers.py  test_report_runtime_contracts.py  test_statistics_detectors.py  test_stats_utils.py  test_submissions_postgres.py  test_time.py  test_triage_builder.py  (+5 more)
(+277 files in other folders)
